グレースケール化を追加

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,7 @@
             <input type="file" id="img_file" name="img_file" class="col-sm-4">
             <select name="processing" class="btn col-sm-4">
                 <option value="edge" class="col-sm-2">エッジ検出</option>
+                <option value="gray" class="col-sm-2">グレースケール化</option>
             </select>
             <input type="submit" value="送信" class="btn col-sm-1" style="margin-left:10px">
         </div>
